--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="./style/home.css">
 </head>
 <body>
-  <header>salom</header>
+  <header>saloedfdfgdgm</header>
   <main></main>
   <footer></footer>
 </body>
