--- a/index.html
+++ b/index.html
@@ -6,10 +6,141 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Imperator site</title>
   <link rel="stylesheet" href="./style/home.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,700;1,800&family=Roboto+Condensed:wght@300;400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 </head>
 <body>
-  <header>saloedfdfgdgm</header>
-  <main></main>
+  <header>
+    <div class="head-header">
+      <div class="container-header">
+        <a class="active" href="#">RUS</a>
+      <a href="#">UZB</a>
+      </div>
+    </div>
+    <div class="container-header">
+      <nav>
+        <div class="logo">
+          <img src="./images/MILANDI.png" alt="logo">
+        </div>
+        <div class="navbar">
+          <ul>
+            <li>
+              <a href="#">Главная</a>
+            </li>
+            <li>
+              <a href="#">О нас</a>
+            </li>
+            <li>
+              <a href="#">Категории</a>
+            </li>
+            <li>
+              <a href="#">Сотрудничество</a>
+            </li>
+          </ul>
+          <div class="nav-right">
+            <button>Войти</button>
+            <button>Зарегистрироваться</button>
+            <a href="#"><i class="fa-light fa-basket-shopping"></i></a>
+          </div>
+        </div>
+      </nav>
+    </div>
+    </header>
+    <!-- main -->
+    <!-- section-1  -->
+  <main>
+    <section class="sec-1">
+        <div class="container">
+        <div class="sec-1__left">
+          <h2>
+            Быстрый и удобный шоппинг, не выходя из дома.
+          </h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Convallis lectus odio vitae, duis nec ut velit, fermentum. Diam sollicitudin arcu euismod morbi. Adipiscing bibendum elementum, fermentum amet quis erat.</p>
+          <a href="#">Все товары</a>
+        </div>
+        <div class="sec-1__right">
+          <img src="./images/main-1.png" alt="">
+        </div>
+      </div>
+      </section>
+      <div class="container">
+        <section class="sec-2">
+          <h2>
+            Наши преимущества
+          </h2>
+          <div class="sec-2__cards">
+            <div>
+              <i class="fa-regular fa-stars"></i>
+              <p>Лучший сервис</p>
+            </div>
+            <div>
+              <i class="fa-regular fa-stars"></i>
+              <p>Экспресс доставка </p>
+            </div>
+            <div>
+              <i class="fa-regular fa-stars"></i>
+              <p>Лучшее качество в стране</p>
+            </div>
+          </div>
+        </section>
+        <section class="sec-3">
+          <h2>Лучшие товары</h2>
+          <div class="best-cards">
+            <div class="best-card">
+              <img src="./images/best-1.png" alt="">
+              <div>
+                <h3>Lorem ipsum dolor sit amet</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit sed odio sed nascetur.</p>
+                 <div class="best-card-star">
+                <img src="./images/stars.png" alt="">
+                <p>855 у.е.</p>
+              </div>
+              <button>Добавить в корзину</button>
+              </div>
+            </div>
+            <div class="best-card">
+              <img src="./images/best-2.png" alt="">
+              <div>
+                <h3>Lorem ipsum dolor sit amet</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit sed odio sed nascetur.</p>
+                 <div class="best-card-star">
+                <img src="./images/stars.png" alt="">
+                <p>855 у.е.</p>
+              </div>
+              <button>Добавить в корзину</button>
+              </div>
+            </div>
+            <div class="best-card">
+              <img src="./images/best-3.png" alt="">
+              <div>
+                <h3>Lorem ipsum dolor sit amet</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit sed odio sed nascetur.</p>
+                 <div class="best-card-star">
+                <img src="./images/stars.png" alt="">
+                <p>855 у.е.</p>
+              </div>
+              <button>Добавить в корзину</button>
+              </div>
+            </div>
+            <div class="best-card">
+              <img src="./images/best-4.png" alt="">
+              <div>
+                <h3>Lorem ipsum dolor sit amet</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit sed odio sed nascetur.</p>
+                 <div class="best-card-star">
+                <img src="./images/stars.png" alt="">
+                <p>855 у.е.</p>
+              </div>
+              <button>Добавить в корзину</button>
+              </div>
+            </div>
+          </div>
+        </section>
+      </div>
+  </main>
   <footer></footer>
 </body>
 </html>
