--- a/categories.html
+++ b/categories.html
@@ -1,15 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Categories</title>
   <link rel="stylesheet" href="./style/categories.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Poppins:wght@400;500;700;800&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
-  <header></header>
-  <main></main>
-  <footer></footer>
+  <header>
+    <div class="head-header">
+      <div class="container-header">
+        <a class="active" href="#">RUS</a>
+        <a href="#">UZB</a>
+      </div>
+    </div>
+    <div class="container-header">
+      <nav>
+        <div class="logo">
+          <img src="./images/MILANDI.png" alt="logo">
+        </div>
+        <div class="navbar">
+          <ul>
+            <li>
+              <a href="#">Главная</a>
+            </li>
+            <li>
+              <a href="#">О нас</a>
+            </li>
+            <li>
+              <a href="#">Категории</a>
+            </li>
+            <li>
+              <a href="#">Сотрудничество</a>
+            </li>
+          </ul>
+          <div class="nav-right">
+            <button>Войти</button>
+            <button>Зарегистрироваться</button>
+            <a href="#"><i class="fa-light fa-basket-shopping"></i></a>
+          </div>
+        </div>
+      </nav>
+    </div>
+  </header>
+
+
+  <main>
+    <section class="container">
+      <h1>Категории</h1>
+      <div>
+        <ul class="inner-container">
+          <li>
+            <img src="./images/catigories_c-products/women.png" alt="women wear">
+            <p>Women’s wear</p>
+          </li>
+          <li>
+            <img src="./images/catigories_c-products/man.png" alt="man wear">
+            <p>Men’s wear</p>
+          </li>
+          <li>
+            <img src="./images/catigories_c-products/kids.png" alt="kids wear">
+          </li>
+          <li>
+            <img src="./images/catigories_c-products/shoes.png" alt="shoes">
+            <p>Shoes</p>
+          </li>
+          <li>
+            <img src="./images/catigories_c-products/bag.png" alt="bags">
+            <p>Сумки</p>
+          </li>
+          <li>
+            <img src="./images/catigories_c-products/acsess.png" alt="Accessories">
+            <p>Accessories</p>
+          </li>
+          <li>
+            <img src="./images/catigories_c-products/under.png" alt="Underwear">
+            <p>Underwear</p>
+          </li>
+          <li>
+            <img src="./images/catigories_c-products/decor.png" alt="Decorations">
+            <p>Decorations</p>
+          </li>
+          <li>
+            <img src="./images/catigories_c-products/textile.png" alt="Home textiles">
+            <p>Home textiles</p>
+          </li>
+          <li>
+            <img src="./images/catigories_c-products/plastics.png" alt="Wholesale">
+            <p>Wholesale</p>
+          </li>
+      </div>
+    </section>
+  </main>
+
+
+  <footer>
+
+  </footer>
 </body>
+
 </html>
