--- a/categories.html
+++ b/categories.html
@@ -27,18 +27,20 @@
         </div>
         <div class="navbar">
           <ul>
-            <li>
-              <a href="#">Главная</a>
-            </li>
-            <li>
-              <a href="#">О нас</a>
-            </li>
-            <li>
-              <a href="#">Категории</a>
-            </li>
-            <li>
-              <a href="#">Сотрудничество</a>
-            </li>
+            <ul>
+              <li>
+                <a href="./index.html">Главная</a>
+              </li>
+              <li>
+                <a href="./about.html">О нас</a>
+              </li>
+              <li>
+                <a href="./categories.html">Категории</a>
+              </li>
+              <li>
+                <a href="./partner.html">Сотрудничество</a>
+              </li>
+            </ul>
           </ul>
           <div class="nav-right">
             <button>Войти</button>
