--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,700;1,800&family=Roboto+Condensed:wght@300;400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
+  <link rel="shortcut icon" href="./images/logo.svg" type="image/x-icon">
 </head>
 <body>
   <header class="header">
@@ -30,20 +31,20 @@
         <div class="navbar">
           <ul>
             <li>
-              <a href="#">Главная</a>
+              <a href="./index.html">Главная</a>
             </li>
             <li>
-              <a href="#">О нас</a>
+              <a href="./about.html">О нас</a>
             </li>
             <li>
-              <a href="#">Категории</a>
+              <a href="./categories.html">Категории</a>
             </li>
             <li>
-              <a href="#">Сотрудничество</a>
+              <a href="./partner.html">Сотрудничество</a>
             </li>
           </ul>
           <div class="nav-right">
-            <button>Войти</button>
+            <button type="reset" formaction="./login.html" >Войти</button>
             <button>Зарегистрироваться</button>
             <a href="#"><img src="./images/ic_cart.png" alt=""></a>
           </div>
