--- a/categories.html
+++ b/categories.html
@@ -10,6 +10,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Poppins:wght@400;500;700;800&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+<link rel="shortcut icon" href="./images/logo.svg" type="image/x-icon">
 </head>
 
 <body>
@@ -103,7 +104,40 @@
 
 
   <footer>
-
+    <div class="container">
+      <div>
+        <h5>про imperia</h5>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eget
+          pretium aenean dignissim sit cursus dictumst adipiscing nunc.
+        </p>
+        <div><img src="./images/footer.png" alt="" /></div>
+      </div>
+      <div>
+        <h5>контакты</h5>
+        <p>+998 90 958 78 87</p>
+        <p>support@fonon.uz</p>
+        <h5>рабочее время</h5>
+        <p>По будням 9:00 to 18:00</p>
+        <p>В выходные 11:00 to 18:00</p>
+      </div>
+      <div>
+        <h5>Меню</h5>
+        <p>Главная</p>
+        <p>О нас</p>
+        <p>Категории</p>
+        <p>Сотрудничество</p>
+      </div>
+      <div>
+        <h5>категории</h5>
+        <p>Женская одежда</p>
+        <p>Мужская одежда</p>
+        <p>Детская одежда</p>
+        <p>Обувь</p>
+        <p>Сумки</p>
+        <p>Аксесуары</p>
+      </div>
+    </div>
   </footer>
 </body>
 
