--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,16 +9,21 @@
   <link rel="stylesheet" href="./style/home.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,700;1,800&family=Roboto+Condensed:wght@300;400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,700;1,800&family=Roboto+Condensed:wght@300;400;700&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+    integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 </head>
+
 <body>
   <header class="header">
     <div class="head-header">
       <div class="container-header">
         <a class="active" href="#">RUS</a>
-      <a href="#">UZB</a>
+        <a href="#">UZB</a>
       </div>
     </div>
     <div class="container-header">
@@ -50,230 +56,239 @@
         </div>
       </nav>
     </div>
-    </header>
-    <!-- main -->
-    <!-- section-1  -->
+  </header>
+  <!-- main -->
+  <!-- section-1  -->
   <main>
     <section class="sec-1">
-        <div class="container">
+      <div class="container">
         <div class="sec-1__left">
           <h2>
             Быстрый и удобный шоппинг, не выходя из дома.
           </h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Convallis lectus odio vitae, duis nec ut velit, fermentum. Diam sollicitudin arcu euismod morbi. Adipiscing bibendum elementum, fermentum amet quis erat.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Convallis lectus odio vitae, duis nec ut velit,
+            fermentum. Diam sollicitudin arcu euismod morbi. Adipiscing bibendum elementum, fermentum amet quis erat.
+          </p>
           <a href="#">Все товары</a>
         </div>
         <div class="sec-1__right">
           <img src="./images/main-1.png" alt="">
         </div>
       </div>
+    </section>
+    <div class="container">
+      <section class="sec-2">
+        <h2>
+          Наши преимущества
+        </h2>
+        <div class="sec-2__cards">
+          <div>
+            <i class="fa-regular fa-stars"></i>
+            <p>Лучший сервис</p>
+          </div>
+          <div>
+            <i class="fa-regular fa-stars"></i>
+            <p>Экспресс доставка </p>
+          </div>
+          <div>
+            <i class="fa-regular fa-stars"></i>
+            <p>Лучшее качество в стране</p>
+          </div>
+        </div>
       </section>
-      <div class="container">
-        <section class="sec-2">
-          <h2>
-            Наши преимущества
-          </h2>
-          <div class="sec-2__cards">
+      <section class="sec-3">
+        <h2>Лучшие товары</h2>
+        <div class="best-cards">
+          <div class="best-card">
+            <img src="./images/best-1.png" alt="">
             <div>
-              <i class="fa-regular fa-stars"></i>
-              <p>Лучший сервис</p>
+              <h3>Lorem ipsum dolor sit amet</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit sed odio sed nascetur.</p>
+              <div class="best-card-star">
+                <img src="./images/stars.png" alt="">
+                <p>855 у.е.</p>
+              </div>
+              <button>Добавить в корзину</button>
             </div>
+          </div>
+          <div class="best-card">
+            <img src="./images/best-2.png" alt="">
             <div>
-              <i class="fa-regular fa-stars"></i>
-              <p>Экспресс доставка </p>
+              <h3>Lorem ipsum dolor sit amet</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit sed odio sed nascetur.</p>
+              <div class="best-card-star">
+                <img src="./images/stars.png" alt="">
+                <p>855 у.е.</p>
+              </div>
+              <button>Добавить в корзину</button>
             </div>
+          </div>
+          <div class="best-card">
+            <img src="./images/best-3.png" alt="">
             <div>
-              <i class="fa-regular fa-stars"></i>
-              <p>Лучшее качество в стране</p>
-            </div>
-          </div>
-        </section>
-        <section class="sec-3">
-          <h2>Лучшие товары</h2>
-          <div class="best-cards">
-            <div class="best-card">
-              <img src="./images/best-1.png" alt="">
-              <div>
-                <h3>Lorem ipsum dolor sit amet</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit sed odio sed nascetur.</p>
-                 <div class="best-card-star">
+              <h3>Lorem ipsum dolor sit amet</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit sed odio sed nascetur.</p>
+              <div class="best-card-star">
                 <img src="./images/stars.png" alt="">
                 <p>855 у.е.</p>
               </div>
               <button>Добавить в корзину</button>
-              </div>
             </div>
-            <div class="best-card">
-              <img src="./images/best-2.png" alt="">
-              <div>
-                <h3>Lorem ipsum dolor sit amet</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit sed odio sed nascetur.</p>
-                 <div class="best-card-star">
+          </div>
+          <div class="best-card">
+            <img src="./images/best-4.png" alt="">
+            <div>
+              <h3>Lorem ipsum dolor sit amet</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit sed odio sed nascetur.</p>
+              <div class="best-card-star">
                 <img src="./images/stars.png" alt="">
                 <p>855 у.е.</p>
               </div>
               <button>Добавить в корзину</button>
-              </div>
             </div>
-            <div class="best-card">
-              <img src="./images/best-3.png" alt="">
-              <div>
-                <h3>Lorem ipsum dolor sit amet</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit sed odio sed nascetur.</p>
-                 <div class="best-card-star">
+          </div>
+        </div>
+      </section>
+      <section class="sec-4">
+        <h2>Категории</h2>
+        <div class="categories">
+          <div class="categories_card">
+            <img src="./images/categ-1.png" alt="">
+            <p>Женская обувь</p>
+          </div>
+          <div class="categories_card">
+            <img src="./images/categ-2.png" alt="">
+          </div>
+          <div class="categories_card">
+            <img src="./images/categ-3.png" alt="">
+          </div>
+          <div class="categories_card">
+            <img src="./images/categ-4.png" alt="">
+          </div>
+        </div>
+      </section>
+      <section class="sec-5">
+        <div class="sec-5__left">
+          <img src="./images/iphone.png" alt="">
+        </div>
+        <div class="sec-5__right">
+          <h2>Скачай приложение и получай призы каждый день</h2>
+          <p>Скачав наш приложение вы получаете возможность играть в призовые игры каждый день и выигровать разного рода
+            подарки для себя.
+            В нашем приложении призовые игры проходят аблолютно каждый день и всё это совершенно бесплатно.</p>
+          <div><img src="./images/iphone-card.png" alt="">
+            <img src="./images/google-play.png" alt="">
+          </div>
+        </div>
+      </section>
+      <section class="sec-6">
+        <h2>Лучшие товары</h2>
+        <div class="best-cards">
+          <div class="best-card">
+            <img src="./images/best-1.png" alt="">
+            <div>
+              <h3>Lorem ipsum dolor sit amet</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit sed odio sed nascetur.</p>
+              <div class="best-card-star">
                 <img src="./images/stars.png" alt="">
                 <p>855 у.е.</p>
               </div>
               <button>Добавить в корзину</button>
-              </div>
             </div>
-            <div class="best-card">
-              <img src="./images/best-4.png" alt="">
-              <div>
-                <h3>Lorem ipsum dolor sit amet</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit sed odio sed nascetur.</p>
-                 <div class="best-card-star">
+          </div>
+          <div class="best-card">
+            <img src="./images/best-2.png" alt="">
+            <div>
+              <h3>Lorem ipsum dolor sit amet</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit sed odio sed nascetur.</p>
+              <div class="best-card-star">
                 <img src="./images/stars.png" alt="">
                 <p>855 у.е.</p>
               </div>
               <button>Добавить в корзину</button>
-              </div>
             </div>
           </div>
-        </section>
-        <section class="sec-4">
-          <h2>Категории</h2>
-          <div class="categories">
-            <div class="categories_card">
-              <img src="./images/categ-1.png" alt="">
-              <p>Женская обувь</p>
-            </div>
-            <div class="categories_card">
-              <img src="./images/categ-2.png" alt="">
-            </div>
-            <div class="categories_card">
-              <img src="./images/categ-3.png" alt="">
-            </div>
-            <div class="categories_card">
-              <img src="./images/categ-4.png" alt="">
-            </div>
-          </div>
-        </section>
-        <section class="sec-5">
-          <div class="sec-5__left">
-            <img src="./images/iphone.png" alt="">
-          </div>
-          <div class="sec-5__right">
-            <h2>Скачай приложение и получай призы каждый день</h2>
-            <p>Скачав наш приложение вы получаете возможность играть в призовые игры каждый день и выигровать разного рода подарки для себя.
-              В нашем приложении призовые игры проходят аблолютно каждый день и всё это совершенно бесплатно.</p>
-              <div><img src="./images/iphone-card.png" alt="">
-              <img src="./images/google-play.png" alt="">
-              </div>
-          </div>
-        </section>
-        <section class="sec-6">
-          <h2>Лучшие товары</h2>
-          <div class="best-cards">
-            <div class="best-card">
-              <img src="./images/best-1.png" alt="">
-              <div>
-                <h3>Lorem ipsum dolor sit amet</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit sed odio sed nascetur.</p>
-                 <div class="best-card-star">
+          <div class="best-card">
+            <img src="./images/best-3.png" alt="">
+            <div>
+              <h3>Lorem ipsum dolor sit amet</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit sed odio sed nascetur.</p>
+              <div class="best-card-star">
                 <img src="./images/stars.png" alt="">
                 <p>855 у.е.</p>
               </div>
               <button>Добавить в корзину</button>
-              </div>
             </div>
-            <div class="best-card">
-              <img src="./images/best-2.png" alt="">
-              <div>
-                <h3>Lorem ipsum dolor sit amet</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit sed odio sed nascetur.</p>
-                 <div class="best-card-star">
+          </div>
+          <div class="best-card">
+            <img src="./images/best-4.png" alt="">
+            <div>
+              <h3>Lorem ipsum dolor sit amet</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit sed odio sed nascetur.</p>
+              <div class="best-card-star">
                 <img src="./images/stars.png" alt="">
                 <p>855 у.е.</p>
               </div>
               <button>Добавить в корзину</button>
-              </div>
-            </div>
-            <div class="best-card">
-              <img src="./images/best-3.png" alt="">
-              <div>
-                <h3>Lorem ipsum dolor sit amet</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit sed odio sed nascetur.</p>
-                 <div class="best-card-star">
-                <img src="./images/stars.png" alt="">
-                <p>855 у.е.</p>
-              </div>
-              <button>Добавить в корзину</button>
-              </div>
-            </div>
-            <div class="best-card">
-              <img src="./images/best-4.png" alt="">
-              <div>
-                <h3>Lorem ipsum dolor sit amet</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit sed odio sed nascetur.</p>
-                 <div class="best-card-star">
-                <img src="./images/stars.png" alt="">
-                <p>855 у.е.</p>
-              </div>
-              <button>Добавить в корзину</button>
-              </div>
             </div>
           </div>
-        </section>
-        <section class="sec-7">
-          <div class="sec-7__left">
-            <img src="./images/sec-7.png" alt="">
-          </div>
-          <div class="sec-7__right">
-            <h2>Создай свой лук на все случаи жизни в “Imperia”</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Diam sollicitudin a cursus in. Vel sit donec semper magna dignissim. Amet, mi justo at metus vestibulum sollicitudin lacus. Nunc vel egestas fermentum pellentesque sed vitae vel.</p>
-            <div><button>начать покупки</button></div>
-          </div>
-        </section>
-        <section class="sec-8">
-          <div><h2>Скидка 30% на первую покупку обслютно для всех</h2></div>
-        </section>
-      </div>
+        </div>
+      </section>
+      <section class="sec-7">
+        <div class="sec-7__left">
+          <img src="./images/sec-7.png" alt="">
+        </div>
+        <div class="sec-7__right">
+          <h2>Создай свой лук на все случаи жизни в “Imperia”</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Diam sollicitudin a cursus in. Vel sit donec
+            semper magna dignissim. Amet, mi justo at metus vestibulum sollicitudin lacus. Nunc vel egestas fermentum
+            pellentesque sed vitae vel.</p>
+          <div><button>начать покупки</button></div>
+        </div>
+      </section>
+      <section class="sec-8">
+        <div>
+          <h2>Скидка 30% на первую покупку обслютно для всех</h2>
+        </div>
+      </section>
+    </div>
   </main>
   <footer>
-   <div class="container">
-    <div>
-      <h5>про imperia</h5>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eget pretium aenean dignissim sit cursus dictumst adipiscing nunc.</p>
-      <div><img src="./images/footer.png" alt=""></div>
+    <div class="container">
+      <div>
+        <h5>про imperia</h5>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eget pretium aenean dignissim sit cursus dictumst
+          adipiscing nunc.</p>
+        <div><img src="./images/footer.png" alt=""></div>
+      </div>
+      <div>
+        <h5>контакты</h5>
+        <p>+998 90 958 78 87</p>
+        <p>support@fonon.uz</p>
+        <h5>рабочее время</h5>
+        <p>По будням 9:00 to 18:00</p>
+        <p>В выходные 11:00 to 18:00</p>
+      </div>
+      <div>
+        <h5>Меню</h5>
+        <p>Главная</p>
+        <p>О нас</p>
+        <p>Категории</p>
+        <p>Сотрудничество</p>
+      </div>
+      <div>
+        <h5>категории</h5>
+        <p>Женская одежда</p>
+        <p>Мужская одежда</p>
+        <p>Детская одежда</p>
+        <p>Обувь</p>
+        <p>Сумки</p>
+        <p>Аксесуары</p>
+      </div>
     </div>
-    <div>
-      <h5>контакты</h5>
-      <p>+998 90 958 78 87</p>
-      <p>support@fonon.uz</p>
-      <h5>рабочее время</h5>
-      <p>По будням 9:00 to 18:00</p>
-      <p>В выходные 11:00 to 18:00</p>
-    </div>
-    <div>
-      <h5>Меню</h5>
-      <p>Главная</p>
-      <p>О нас</p>
-      <p>Категории</p>
-      <p>Сотрудничество</p>
-    </div>
-    <div>
-      <h5>категории</h5>
-      <p>Женская одежда</p>
-      <p>Мужская одежда</p>
-      <p>Детская одежда</p>
-      <p>Обувь</p>
-      <p>Сумки</p>
-      <p>Аксесуары</p>
-    </div>
-   </div>
   </footer>
-  
+
   <script src="./js/index.js"></script>
 </body>
+
 </html>
