last change product

--- a/categories.html
+++ b/categories.html
@@ -8,16 +8,9 @@
   <title>Categories</title>
   <link rel="stylesheet" href="./style/categories.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<<<<<<< HEAD
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Poppins:wght@400;500;700;800&family=Roboto:wght@400;700&display=swap"
-    rel="stylesheet">
-=======
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Poppins:wght@400;500;700;800&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-<link rel="shortcut icon" href="./images/logo.svg" type="image/x-icon">
->>>>>>> 5ee91db00c5caf7610571d176c7821b06cae9cf7
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Poppins:wght@400;500;700;800&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="shortcut icon" href="./images/logo.svg" type="image/x-icon">
 </head>
 
 <body>
@@ -68,43 +61,53 @@
         <ul class="inner-container">
           <li>
             <img src="./images/catigories_c-products/women.png" alt="women wear">
-            <p>Women’s wear</p>
+            <br>
+            <a href="./category-products.html">Women’s wear</a>
           </li>
           <li>
             <img src="./images/catigories_c-products/man.png" alt="man wear">
-            <p>Men’s wear</p>
+            <br>
+            <a href="./category-products.html">Men’s wear</a>
           </li>
           <li>
             <img src="./images/catigories_c-products/kids.png" alt="kids wear">
-            <p>Kid’s wear</p>
+            <br>
+            <a href="./category-products.html">Kid’s wear</a>
           </li>
           <li>
             <img src="./images/catigories_c-products/shoes.png" alt="shoes">
-            <p>Shoes</p>
+            <br>
+            <a href="./category-products.html">Shoes</a>
           </li>
           <li>
             <img src="./images/catigories_c-products/bag.png" alt="bags">
-            <p>Сумки</p>
+            <br>
+            <a href="./category-products.html">Сумки</a>
           </li>
           <li>
             <img src="./images/catigories_c-products/acsess.png" alt="Accessories">
-            <p>Accessories</p>
+            <br>
+            <a href="./category-products.html">Accessories</a>
           </li>
           <li>
             <img src="./images/catigories_c-products/under.png" alt="Underwear">
-            <p>Underwear</p>
+            <br>
+            <a href="./category-products.html">Underwear</a>
           </li>
           <li>
             <img src="./images/catigories_c-products/decor.png" alt="Decorations">
-            <p>Decorations</p>
+            <br>
+            <a href="./category-products.html">Decorations</a>
           </li>
           <li>
             <img src="./images/catigories_c-products/textile.png" alt="Home textiles">
-            <p>Home textiles</p>
+            <br>
+            <a href="./category-products.html">Home textiles</a>
           </li>
           <li>
             <img src="./images/catigories_c-products/plastics.png" alt="Wholesale">
-            <p>Wholesale</p>
+            <br>
+            <a href="./category-products.html">Wholesale</a>
           </li>
       </div>
     </section>
