--- a/category-products.html
+++ b/category-products.html
@@ -28,16 +28,16 @@
         <div class="navbar">
           <ul>
             <li>
-              <a href="#">Главная</a>
+              <a href="index.html">Главная</a>
             </li>
             <li>
-              <a href="#">О нас</a>
+              <a href="about.html">О нас</a>
             </li>
             <li>
-              <a href="#">Категории</a>
+              <a href="categories.html">Категории</a>
             </li>
             <li>
-              <a href="#">Сотрудничество</a>
+              <a href="partner.html">Сотрудничество</a>
             </li>
           </ul>
           <div class="nav-right">
@@ -154,15 +154,18 @@
       <ul class="inner-container">
         <li>
           <img src="./images/catigories_c-products/women.png" alt="women wear">
-          <p>Women’s wear</p>
+          <br>
+          <a href="./category-products.html">Women’s wear</a>
         </li>
         <li>
           <img src="./images/catigories_c-products/man.png" alt="man wear">
-          <p>Men’s wear</p>
+          <br>
+          <a href="./category-products.html">Men’s wear</a>
         </li>
         <li>
           <img src="./images/catigories_c-products/kids.png" alt="kids wear">
-          <p>Kid’s wear</p>
+          <br>
+          <a href="./category-products.html">Kid’s wear</a>
         </li>
       </ul>
     </section>
