--- a/categories.html
+++ b/categories.html
@@ -8,16 +8,13 @@
   <title>Categories</title>
   <link rel="stylesheet" href="./style/categories.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<<<<<<< HEAD
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
     href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Poppins:wght@400;500;700;800&family=Roboto:wght@400;700&display=swap"
     rel="stylesheet">
-=======
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Poppins:wght@400;500;700;800&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 <link rel="shortcut icon" href="./images/logo.svg" type="image/x-icon">
->>>>>>> 5ee91db00c5caf7610571d176c7821b06cae9cf7
 </head>
 
 <body>
@@ -34,8 +31,8 @@
           <img src="./images/MILANDI.png" alt="logo">
         </div>
         <div class="navbar">
-          <ul>
-            <ul>
+          <ul class="menus">
+      
               <li>
                 <a href="./index.html">Главная</a>
               </li>
@@ -48,7 +45,7 @@
               <li>
                 <a href="./partner.html">Сотрудничество</a>
               </li>
-            </ul>
+        
           </ul>
           <div class="nav-right">
             <button>Войти</button>
